# xodoku

./: README.md
sudoku-rs/: Cargo.toml
sudoku-rs/examples/: brute_force.rs  generate.rs  grid.rs  permutation.rs
sudoku-rs/src/: candidate.rs  error.rs  grid.rs  grid_constant.rs  lib.rs  solution.rs
sudoku-rs/src/generator/: generate.rs  mod.rs  symmetry.rs
sudoku-rs/src/solver/: avoidable_rectangle_1.rs  avoidable_rectangle_2.rs  basic_fish.rs  brute_force.rs  bug_plus_one.rs  empty_rectangle.rs  fish.rs  full_house.rs  hidden_rectangle.rs  hidden_set.rs  hidden_single.rs  locked_candidate.rs  mod.rs  nacked_set.rs  nacked_single.rs  nakced_set.rs  naked_set.rs  naked_single.rs  skyscraper.rs  step.rs  step_accumulator.rs  sue_de_coq.rs  two_string_kit.rs  unique.rs  unique_1.rs  unique_2.rs  unique_3.rs  unique_4.rs  unique_5.rs  unique_6.rs  wwing.rs  xywing.rs
sudoku-rs/src/util/: digitset.rs  format_step.rs  indexset.rs  mod.rs
sudoku-rs/templates/: full_house.html
sudoku-rs/tests/: test_all_finnder.rs
sudoku-wasm/: Cargo.toml  build_wasm.sh
sudoku-wasm/src/: lib.rs
sudoku-web/: package.json  pnpm-lock.yaml  tailwind.config.js
sudoku-web/app/: globals.css  layout.js  page.js  robots.js  sitemap.js
sudoku-web/app/atom/: EditorAtom.js  PlayerAtoms.js  cell.js
sudoku-web/app/components/: AppShellComponent.jsx
sudoku-web/app/lib/: constant.js  ocr.js  posts.js  sudoku_util.js  yolo.js
sudoku-web/app/play/: PlayComponent.js  page.js
sudoku-web/notes/: hidden-subsets.md  intersections.md  introduction.md  singles.md
(+49 files in other folders)
