[package]
name = "sudoku-wasm"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = {version="0.3.3",features=["wasm_js"]}
lazy_static = "1.5.0"
rand = {version="0.9.1"}
wasm-bindgen = "0.2.100"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
web-sys = {version="0.3.77",features=["console"]}
sudoku-rs ={path="/home/zhengwu/workspace/private/projects/xodoku/sudoku-rs"}

[profile.release]
debug = true

